feat:패키징후 디비연결완료

--- a/package.json
+++ b/package.json
@@ -232,6 +232,12 @@
       "buildResources": "assets",
       "output": "release/build"
     },
+    "extraFiles": [{
+    "from": "./release/app/database.db",
+    "to": "./Resources/database.db",
+    "filter": ["**/*"]
+  }
+],
     "extraResources": [
       "./assets/**"
     ],
